--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           JavaScriptを有効に設定してからご利用ください
         </div>
     </noscript>
+    <input type="hidden" id="user_id" name="user_id" value="abcdefghij" />
      <div id="synergy-nform-loading" class="synergy-nform-loading" style="background-color: #E5E5E5; line-height: 1.7; color: #2C3E50; text-align: center; padding: 64px 24px; height: 100%;">
         <div class="synergy-nform-loading__icon" style="width: 64px; margin: auto;">
           <svg style="width: 64px; height: 64px; fill: #BCC4C8; animation: synergy-nform-loading-spin 2s infinite linear;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"/></svg>
