--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <label><input type="checkbox" name="multiAnswer(ANSWER6)" value="1"/>同意する</label> <br>
 <br>
  
-<input type="hidden" id="user_id" name="user_id" value="abcdefghij" />
+<input type="hidden" id="user_id" name="singleAnswer(ANSWER3)" value="abcdefghij" />
 
 <input type="submit" value="　送　信　">
 <br />
